WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164640
[CSS Parser] Fix SVG markers and colors
https://bugs.webkit.org/show_bug.cgi?id=164640
Summary
[CSS Parser] Fix SVG markers and colors
Dave Hyatt
Reported
2016-11-11 10:07:02 PST
[CSS Parser] Fix SVG markers and colors
Attachments
Patch
(2.69 KB, patch)
2016-11-11 10:53 PST
,
Dave Hyatt
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-11-11 10:53:54 PST
Created
attachment 294508
[details]
Patch
Dave Hyatt
Comment 2
2016-11-11 10:55:46 PST
Fixed in
r208594
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug