[CSS Parser] Fix SVG markers and colors https://bugs.webkit.org/show_bug.cgi?id=164640

Reviewed by Dean Jackson.

* css/StyleBuilderConverter.h:
(WebCore::StyleBuilderConverter::convertSVGColor):
* css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::parseShorthand):



Canonical link: https://commits.webkit.org/182317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208594 268f45cc-cd09-0410-ab3c-d52691b4dbfc