Source/WebCore/css/StyleBuilderConverter.h
@@ -1327,6 +1327,11 @@ inline String StyleBuilderConverter::convertSVGURIReference(StyleResolver& style
 
 inline Color StyleBuilderConverter::convertSVGColor(StyleResolver& styleResolver, const CSSValue& value)
 {
+    // FIXME-NEWPARSER: Remove the code that assumes SVGColors.
+    // FIXME: What about visited link support?
+    if (is<CSSPrimitiveValue>(value))
+        return styleResolver.colorFromPrimitiveValue(downcast<CSSPrimitiveValue>(value));
+
     auto& svgColor = downcast<SVGColor>(value);
     return svgColor.colorType() == SVGColor::SVG_COLORTYPE_CURRENTCOLOR ? styleResolver.style()->color() : svgColor.color();
 }
